k8s/prod/1.7/rollout/flask-tutorial-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-tutorial-external-vs
  namespace: ms-prod
spec:
  hosts:
  - "prod-flask.kkkk.com"
  gateways:
  - flask-tutorial-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: flask-tutorial
        subset: prod
      weight: 100
    - destination:
        host: flask-tutorial
        subset: canary
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-tutorial-internal-vs
spec:
  hosts:
  - flask-tutorial
  http:
  - route:
    - destination:
        host: flask-tutorial
        subset: prod
      weight: 100
    - destination:
        host: flask-tutorial
        subset: canary
      weight: 0
